# PlaySource

./: PlaySource.sln  PlaySource.vcxproj  PlaySource.vcxproj.filters  codegen.sh  playsource.service  sample_queue.json
cmd/: main.go  playsource.go  server.go
pkg/mopidy/: client.go  model.go
pkg/playsource/: playsource_service.pb.go  playsource_service.proto
pkg/server/: mopidy_server.go  mopidy_session.go  test_server.go  test_server_test.go
pkg/systemd/: service.go
src/: CMakeLists.txt  PlaySource.cpp  PlaySource.h
